better handling of overrides
